# P2RemoteConnection

./: .gitignore  README.md  start_remote_connection.sh  start_remote_connection_sim.sh
app/: main.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/p2_remote_connection/include/p2_remote_connection/common/: patch.hpp
install/p2_remote_connection/include/p2_remote_connection/common/install/: setup.bash  setup.ps1
install/p2_remote_connection/share/ament_index/resource_index/package_run_dependencies/: p2_remote_connection
install/p2_remote_connection/share/p2_remote_connection/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/p2_remote_connection/: CMakeLists.txt  README.md  index.html  package.xml
src/p2_remote_connection/app/: go2_front_camera.html  go2_joystick.html  go2_map_viewer.html  go2_movement_controller.html  go2_other.html  go2_remote.html  go2_terminal_only.html  index.html  main.py  ros_bridge.py  terminal.py  terminal_ec2.py
src/p2_remote_connection/app/static/: shared.css  shared.js
src/p2_remote_connection/include/p2_remote_connection/: command_transfer.h
src/p2_remote_connection/include/p2_remote_connection/common/: ros2_sport_client.h
src/p2_remote_connection/include/p2_remote_connection/common/install/: local_setup.sh  setup.sh  setup.zsh
src/p2_remote_connection/include/p2_remote_connection/common/log/: latest_build
src/p2_remote_connection/src/: L1_pcd_web_packer.cpp  advanced_gamepad_controller_web.cpp  flatten_L1_data.cpp  image_to_compressed_bridge.py  mock_map2d_pub.py  move_forward_meters_node.cpp  stairs_detector.cpp  web_teleop_bridge.cpp  web_teleop_bridge_sim.cpp
src/p2_remote_connection/src/common/: ros2_sport_client.cpp
src/p2_remote_connection/src/cv/: ROS_yolo.py  yolo.py
src/p2_remote_connection/src/cv/model/: model_download.py
