<?xml version="1.0"?>
<package format="3">
  <name>p2_remote_connection</name>
  <version>0.0.1</version>
  <description>Web-to-Unitree Go2 teleop bridge</description>

  <maintainer email="z5482422@gmail.com">Victor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <depend>unitree_api</depend>
  <depend>unitree_go</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
